--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forkify",
+  "name": "recipro",
   "version": "1.0.0",
   "description": "Recipe Application",
   "default": "index.html",
